# ocaml-kafka

./: .astylerc  .gitignore  .ocamlformat  .travis.yml  CHANGES.md  LICENSE  META  META.lwt  META.sync  Makefile  README.md  TODO.md  _tags  create_topic.ml  dune-project  index.html  kafka.ml  kafka.mli  kafka.opam  kafka.opam.template  kafkaConsumer.ml  kafkaConsumer.mli  kafkaProducer.ml  kafkaProducer.mli  kafka_async.opam  kafka_lwt.ml  kafka_lwt.mli  kafka_lwt.opam  kafkatail.ml  libocamlkafka.clib  libocamlkafka.clib.lwt  librdkafka-version.c  myocamlbuild.ml  ocaml_kafka.c  ocaml_lwt_kafka.c  okafka.mllib  okafka.mllib.lwt  okafka.opam  sendto_kafka_topic.ml  tests.ml
.github/: dependabot.yml
.github/workflows/: workflow.yml
kafka/: index.html
kafka/Kafka/: index.html
kafka/Kafka/Metadata/: index.html
kafka/Kafka_helpers/: index.html
kafka/Kafka_helpers/Kafka_consumer/: index.html
kafka/Kafka_helpers/Kafka_producer/: index.html
kafka/Kafka_helpers__Kafka_consumer/: index.html
kafka/Kafka_helpers__Kafka_producer/: index.html
kafka_async/: index.html
kafka_async/Kafka_async/: index.html
kafka_lwt/: index.html
kafka_lwt/Kafka_lwt/: index.html
lib/: dune  jbuild  kafka.ml  kafka.mli  ocaml_kafka.c  ocaml_kafka.h
lib/config/: discover.ml
lib_async/: dune  kafka_async.ml  kafka_async.mli  ocaml_async_kafka.c
lib_helpers/: dune  jbuild  kafka_consumer.ml  kafka_consumer.mli  kafka_producer.ml  kafka_producer.mli
lib_lwt/: dune  jbuild  kafka_lwt.ml  kafka_lwt.mli  ocaml_lwt_kafka.c
test/: dune  jbuild  tests.ml
test/integration/: dune  integration.ml
test/unit/: dune  unit.ml
test_async/consumer/: consumer.ml  dune
test_async/integration/: dune  integration.ml
test_async/producer/: dune  producer.ml
test_lwt/: dune
test_lwt/integration/: dune  integration.ml
test_lwt/issue3/: dune  issue3.ml
test_lwt/unit/: dune  unit.ml
