opam-version: "1.2"
version: "0.4"
name: "kafka"
maintainer: "Didier Wenzek <didier.wenzek@acidalie.com>"
authors: ["Didier Wenzek <didier.wenzek@acidalie.com>"]
homepage: "https://github.com/didier-wenzek/ocaml-kafka"
bug-reports: "https://github.com/didier-wenzek/ocaml-kafka/issues"
dev-repo: "https://github.com/didier-wenzek/ocaml-kafka.git"
license: "MIT"
build: [["dune" "build" "-p" name "-j" jobs]]
build-test: [ "dune" "runtest" "-p" name ]
depends: [
  "lwt"
  "cmdliner"
  "dune" {build & >= "1.0"}
]
depexts: [
  [["alpine"] ["zlib-dev" "librdkafka-dev"]]
  [["centos"] ["zlib-devel" "librdkafka-devel"]]
  [["debian"] ["zlib1g-dev" "librdkafka-dev"]]
  [["fedora"] ["zlib-devel" "librdkafka-devel"]]
  [["homebrew" "osx"] ["zlib" "librdkafka"]]
  [["ubuntu"] ["zlib1g-dev" "librdkafka-dev"]]
]
available: [
  ocaml-version >= "4.02.3"
]
