opam-version: "2.0"
name: "kafka"
version: "0.4"
maintainer: "Didier Wenzek <didier.wenzek@acidalie.com>"
authors: "Didier Wenzek <didier.wenzek@acidalie.com>"
license: "MIT"
homepage: "https://github.com/didier-wenzek/ocaml-kafka"
bug-reports: "https://github.com/didier-wenzek/ocaml-kafka/issues"
dev-repo: "git+https://github.com/didier-wenzek/ocaml-kafka.git"
depends: [
  "ocaml" {>= "4.02.3"}
  "lwt"
  "cmdliner"
  "conf-zlib"
  "dune" {build & >= "1.0"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
depexts: [
  ["librdkafka-dev"] {os-distribution = "alpine"}
  ["librdkafka-devel"] {os-distribution = "centos"}
  ["librdkafka-dev"] {os-distribution = "debian"}
  ["librdkafka-devel"] {os-distribution = "fedora"}
  ["librdkafka"] {os-distribution = "homebrew" & os = "macos"}
  ["librdkafka-dev"] {os-distribution = "ubuntu"}
]
synopsis: "OCaml bindings for Kafka"
description: """
Kafka is a high-throughput distributed messaging system.
"""
