opam-version: "1.2"
version: "0.3.0"
name: "okafka"
synopsis: "OCaml bindings for Kafka"
maintainer: "Didier Wenzek <didier.wenzek@acidalie.com>"
authors: ["Didier Wenzek <didier.wenzek@acidalie.com>"]
homepage: "https://github.com/didier-wenzek/ocaml-kafka"
bug-reports: "https://github.com/didier-wenzek/ocaml-kafka/issues"
dev-repo: "https://github.com/didier-wenzek/ocaml-kafka"
license: "GPL"
build: [
  ["jbuilder" "build" "--only" "okafka" "--root" "." "-j" jobs "@install"]
]
install: [make "install"]
remove: [make "uninstall"]
depends: ["jbuilder"]
