(library
 (name kafka)
 (public_name kafka)
 (foreign_stubs
  (language c)
  (names ocaml_kafka)
  (flags
   (:include c_flags.sexp)
   -Wall
   -Werror))
 (c_library_flags
  (:include c_library_flags.sexp)))

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (action
  (run ./config/discover.exe)))
