(library
 (name kafka_async)
 (public_name kafka_async)
 (libraries kafka async)
 (preprocess (pps ppx_let))
 (c_names ocaml_async_kafka)
 ; the -I and -L flags are required for freebsd, harmless elsewhere
 (c_flags -I/usr/local/include)
 (c_library_flags -L/usr/local/lib -lrdkafka))

(copy_files ../lib/ocaml_kafka.h)
