(library
 (name kafka_async)
 (public_name kafka_async)
 (libraries kafka async)
 (optional)
 (preprocess (pps ppx_let))
 ; the -I and -L flags are required for freebsd, harmless elsewhere
 (foreign_stubs (language c) (names ocaml_async_kafka) (flags -I/usr/local/include -Wall -Werror))
 (c_library_flags -L/usr/local/lib -lrdkafka))

(copy_files ../lib/ocaml_kafka.h)
