(library
 (name kafka_lwt)
 (public_name kafka_lwt)
 (optional)
 (libraries kafka lwt.unix)
 ; the -I and -L flags are required for freebsd, harmless elsewhere
 (foreign_stubs (language c) (names ocaml_lwt_kafka) (flags -I/usr/local/include -Wall -Werror))
 (c_library_flags -L/usr/local/lib -lrdkafka -lpthread -lz))
