(library
 (name kafka_lwt)
 (public_name kafka_lwt)
 (optional)
 (libraries kafka lwt.unix)
 (foreign_stubs
  (language c)
  (names ocaml_lwt_kafka)
  (flags
   (:include c_flags.sexp)
   -Wall
   -Werror))
 (c_library_flags
  (:include c_library_flags.sexp)))

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (action
  (run ../lib/config/discover.exe)))
